Fixed some links, remade mister sparkle description

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
 <div id="black-box"></div>
 </div>
   <div id="logo-box">
-   	<img id="logo" src="images/logo.gif">
+    <a href="index.html"><img id="logo" src="images/logo.gif"></a>
   </div>
 
 <div id="name_box">
