--- a/item.html
+++ b/item.html
@@ -39,8 +39,8 @@
 
 <div class="info">
 <h1 id="item_name"> Mister Sparkle Tee</h1>
-<p > Printed with high vibrancy sublimation technology on super comfortable 
-lightweight polyester American Apparel t-shirts. Made in the USA sweatshop free. </p>
+<p > A cotton tee in ミスタースパーコル's likeness. For Lucky Best Wash, use Mister Sparkle!</p> 
+<p> $34.98 </p>
 </div>
 
 
@@ -73,6 +73,7 @@ lightweight polyester American Apparel t-shirts. Made in the USA sweatshop free.
  	<p>&copy;2016 - <strong>phaedra paul</strong></p>
     
   </div>
+</div>
 </div>
 <!-- Main Container Ends -->
 </body>
